--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 						<span class="image fit"><img src=images\BI.png alt="" /></span>
 						<h3>Microsoft Power BI</h3>
 						<p>The last step I take is to visualize and validate my findings with management.
-							For example, I will make a line chart showing the increase/decrease usage of a specific item.
+							For example, I will make a line chart showing the increase/decrease usage of a specific
+							item.
 							This allows management and I to identify deficiencies and make data driven decisions to
 							correct them.
 						</p>
@@ -95,7 +96,7 @@
 		<div class="container">
 			<header>
 				<h2>Here are some projects I made.</h2>
-				<p>Please click on the icons to navigate to my projects. <br> You will find that I am well rounded in
+				<p>Please click on the icons to navigate to my projects. <br> You will find that I am compentent in
 					Tableau, SQL, and R programming.</p>
 			</header>
 			<div class="row">
