--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		<div class="container">
 			<header>
 				<h2>Here are some projects I made.</h2>
-				<p>Please click on the icons to navigate to my projects. <br> You will find that I am compentent in
+				<p>Please click on the icons to navigate to my projects. <br> You will find that I am competent in
 					Tableau, SQL, and R programming.</p>
 			</header>
 			<div class="row">
