--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					<article class="box style2">
 						<a href="#" class="image featured"><img src=images\google_bigquery.png alt="" /></a>
 						<h3>SQL<a href="#"></a></h3>
-						<p>Take a look at some queries I've constructed with SQL.</p>
+						<p>Take a look at some queries I have constructed with SQL.</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
