--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<article class="box style2">
 						<a href="https://public.tableau.com/app/profile/jacob.couchenour" class="image featured"><img
 								src=images\Tableau.jpg alt="" /></a>
-						<h3><a href="#">Tableau</a></h3>
+						<h3><a href="https://public.tableau.com/app/profile/jacob.couchenour">Tableau</a></h3>
 						<p>Check out my visualizations in Tableau.</p>
 					</article>
 				</div>
