--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					<article class="box style2">
 						<a href="https://www.youtube.com/@jacobcouchenour2232/videos"class="image featured"><img
 								src=images\SQL.png alt="" /></a>
-						<h3>SQL<a href="https://www.youtube.com/@jacobcouchenour2232/videos"></a></h3>
+						<h3><a href="https://www.youtube.com/@jacobcouchenour2232/videos">SQL</a></h3>
 						<p>Check out my SQL tutorials in Big query.</p>
 					</article>
 				</div>
