--- a/index.html
+++ b/index.html
@@ -110,20 +110,20 @@
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="https://www.youtube.com/@jacobcouchenour2232/videos"class="image featured"><img
+						<a href="https://www.youtube.com/@jacobcouchenour2232/videos" class="image featured"><img
 								src=images\SQL.png alt="" /></a>
 						<h3><a href="https://www.youtube.com/@jacobcouchenour2232/videos">SQL</a></h3>
-						<p>Check out my SQL tutorials in Big query.</p>
+						<p>Check out my Microsoft Excel,Power Query, Power Pivot, and SQL tutorial videos.</p>
 					</article>
 				</div>
-				<div class="col-4 col-6-medium col-12-small">
+				<!--<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="https://posit.cloud/content/4902660" class="image featured"><img src=images\r.jpg
 								alt="" /></a>
 						<h3><a href="#">R</a></h3>
 						<p>Take a interactive look at my RMD files.</p>
 					</article>
-				</div>
+				</div>-->
 
 	</article>
 
