--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			<header>
 				<h2>Here are some projects I made.</h2>
 				<p>Please click on the icons to navigate to my projects. <br> You will find that I am competent in
-					Tableau, SQL, and R programming.</p>
+					Microsoft Excel, Power Query, Pivot Tables, SQL, and Tableau.</p>
 			</header>
 			<div class="row">
 				<div class="col-4 col-6-medium col-12-small">
@@ -113,7 +113,7 @@
 						<a href="https://www.youtube.com/@jacobcouchenour2232/videos" class="image featured"><img
 								src=images\SQL.png alt="" /></a>
 						<h3><a href="https://www.youtube.com/@jacobcouchenour2232/videos">SQL</a></h3>
-						<p>Check out my Microsoft Excel,Power Query, Power Pivot, and SQL tutorial videos.</p>
+						<p>Check out my Microsoft Excel, Power Query/Pivot, and SQL tutorial videos.</p>
 					</article>
 				</div>
 				<!--<div class="col-4 col-6-medium col-12-small">
