--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<nav id="nav">
 		<ul class="container">
 			<li><a href="#top">Top</a></li>
-			<li><a href="#work">Current Role</a></li>
+			<li><a href="#work">My Role as an Inventory Specialist</a></li>
 			<li><a href="#portfolio">Portfolio</a></li>
 		</ul>
 	</nav>
