--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<nav id="nav">
 		<ul class="container">
 			<li><a href="#top">Top</a></li>
-			<li><a href="#work">My Role as an Inventory Specialist</a></li>
+			<li><a href="#work">My Role As An Inventory Specialist</a></li>
 			<li><a href="#portfolio">Portfolio</a></li>
 		</ul>
 	</nav>
@@ -131,6 +131,10 @@
 	<ul class="social">
 		<li><a href="https://github.com/CouchenourJake" class="icon brands fa-github"><span
 					class="label">Github</span></a></li>
+	</ul>
+	<ul class="social">
+		<li><a href="https://www.linkedin.com/in/jacob-couchenour-886904121/" class="icon brands fa-linkedin"><span
+					class="label">linkedin</span></a></li>
 	</ul>
 	<hr />
 	</div>
