--- a/index.html
+++ b/index.html
@@ -116,14 +116,13 @@
 						<p>Check out my Microsoft Excel, Power Query/Pivot, and SQL tutorial videos.</p>
 					</article>
 				</div>
-				<!--<div class="col-4 col-6-medium col-12-small">
+				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="https://posit.cloud/content/4902660" class="image featured"><img src=images\r.jpg
-								alt="" /></a>
+						<a href="R.html" class="image featured"><img src=images\r.jpg alt="" /></a>
 						<h3><a href="#">R</a></h3>
 						<p>Take a interactive look at my RMD files.</p>
 					</article>
-				</div>-->
+				</div>
 
 	</article>
 
