--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="R.html" class="image featured"><img src=images\r.jpg alt="" /></a>
-						<h3><a href="#">R</a></h3>
+						<h3><a href="R.html" >R</a></h3>
 						<p>Take a interactive look at my RMD files.</p>
 					</article>
 				</div>
