--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					<article class="box style2">
 						<a href="R.html" class="image featured"><img src=images\r.jpg alt="" /></a>
 						<h3><a href="R.html">R</a></h3>
-						<p>Take a interactive look at my RMD files.</p>
+						<p>Check out my RMD file.</p>
 					</article>
 				</div>
 
