--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<header>
 						<h1><strong>Jacob Couchenour</strong></h1>
 					</header>
-					<p>A highly motivated Inventory Specialist aspiring to be a Data Analyst.</p>
+					<p>A highly motivated Data Analyst.</p>
 					<a href="#work" class="button large scrolly">See how I use Data Analysis <br>In my current role
 						</br></a>
 					<a href="#portfolio" class="button large scrolly">Check out some of my recent work</a>
