--- a/index.html
+++ b/index.html
@@ -112,8 +112,11 @@
 					<article class="box style2">
 						<a href="https://www.youtube.com/@jacobcouchenour2232/videos" class="image featured"><img
 								src=images\SQL.png alt="" /></a>
-						<h3><a href="https://www.youtube.com/@jacobcouchenour2232/videos">SQL</a></h3>
-						<p>Check out my Microsoft Excel, Power Query/Pivot, and SQL tutorial videos.</p>
+						<h3><a href="https://www.youtube.com/@jacobcouchenour2232/videos">Videos</a></h3>
+						<h3><a href="https://github.com/CouchenourJake/SQL_TXT/blob/main/SQLQuery12_8_5_22.sql">Query
+								Text</a></h3>
+						<p>Check out my Microsoft Excel, Power Query/Pivot, and SQL videos AND OR look at SQL Queries I
+							have created.</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
