--- a/index.html
+++ b/index.html
@@ -48,17 +48,16 @@
 	<article id="work" class="wrapper style2">
 		<div class="container">
 			<header>
-				<h2>A typical task that I face as an Inventory Specialist is balancing safety stock requirements.
-					Below explains how my team and I make confident data driven safety stock adjustments.</h2>
+				<h2>I have experience compiling and analyzing information via numerous applications to make data-driven
+					decisions.
+					See examples of my work below.</h2>
 			</header>
 			<div class="row aln-center">
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span class="image fit"><img src=images\JDE.png alt="" /></span>
 						<h3>JD Edwards</h3>
-						<p>The first step to identifying safety stock requirements is retrieving the item usage data.
-							I select a program and enter information for the query.
-							I will then download the dataset as a CSV file.</p>
+						<p>I compile and analyze usage data using Oracle to determine needed inventory adjustments.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
