--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 	<nav id="nav">
 		<ul class="container">
 			<li><a href="#top">Top</a></li>
-			<li><a href="#work">My Role As An Inventory Specialist</a></li>
 			<li><a href="#portfolio">Portfolio</a></li>
 		</ul>
 	</nav>
@@ -36,9 +35,7 @@
 						<h1><strong>Jacob Couchenour</strong></h1>
 					</header>
 					<p>A highly motivated Data Analyst.</p>
-					<a href="#work" class="button large scrolly">See how I use Data Analysis <br>In my current role
-						</br></a>
-					<a href="#portfolio" class="button large scrolly">Check out some of my recent work</a>
+					<a href="#portfolio" class="button large scrolly">Check out my projects</a>
 				</div>
 			</div>
 		</div>
@@ -49,45 +46,61 @@
 		<div class="container">
 			<header>
 				<h2>I have experience compiling and analyzing information via numerous applications to make data-driven
-					decisions.
-					See examples of my work below.</h2>
+					decisions.</h2>
+			</header>
+			<header>
+				<h3>I am well rounded in the following applications/programs.</h3>
 			</header>
 			<div class="row aln-center">
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span class="image fit"><img src=images\JDE.png alt="" /></span>
 						<h3>JD Edwards</h3>
-						<p>I compile and analyze usage data using Oracle to determine needed inventory adjustments.</p>
+						<p>-Data Entry <br>-Data Mining <br>-Data Processing</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span class="image fit"><img src=images\excel.jpg alt="" /></span>
 						<h3>Microsoft Excel</h3>
-						<p>Next, I will open Excel and upload the CSV file.
-							I use the Power Query Editor to the clean data.
-							For example, I may have to split a column to create a new key.
-							I also will remove columns, blanks, and errors. I will create formulas, filters, and
-							functions.
-							Then I will investigate specific areas and start to analyze the data. </p>
+						<p>-Power Query/Data Cleaning <br> -Pivot Tables & Visualizations <br>-Data Analysis</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span class="image fit"><img src=images\BI.png alt="" /></span>
 						<h3>Microsoft Power BI</h3>
-						<p>The last step I take is to visualize and validate my findings with management.
-							For example, I will make a line chart showing the increase/decrease usage of a specific
-							item.
-							This allows management and I to identify deficiencies and make data driven decisions to
-							correct them.
-						</p>
+						<p>-Data Visualizations <br>-Dashboards<br>-Interactive Data Analysis</p>
 					</section>
 				</div>
+				<div class="row aln-center">
+					<div class="col-4 col-6-medium col-12-small">
+						<section class="box style1">
+							<span class="image fit"><img src=images\MSSMS.png alt="" /></span>
+							<h3>Microsoft SQL SMS</h3>
+							<p>-Data Cleaning <br> -Querying Relational Tables <br>-Data Analysis</p>
+						</section>
+					</div>
+					<div class="col-4 col-6-medium col-12-small">
+						<section class="box style1">
+							<span class="image fit"><img src=images\Tableau.jpg alt="" /></span>
+							<h3>Tableau</h3>
+							<p>-Data Visualizations <br>-Dashboards<br>-Interactive Data Analysis</p>
+						</section>
+					</div>
+
+					<div class="col-4 col-6-medium col-12-small">
+						<section class="box style1">
+							<span class="image fit"><img src=images\r-programming.png alt="" /></span>
+							<h3>R Programing</h3>
+							<p>-Data Cleaning <br> -Data Visualizations <br>-Data Analysis</p>
+							</p>
+						</section>
+					</div>
+				</div>
+				<footer>
+				</footer>
 			</div>
-			<footer>
-			</footer>
-		</div>
 	</article>
 
 	<!-- Portfolio -->
@@ -132,8 +145,6 @@
 	<ul class="social">
 		<li><a href="https://github.com/CouchenourJake" class="icon brands fa-github"><span
 					class="label">Github</span></a></li>
-	</ul>
-	<ul class="social">
 		<li><a href="https://www.linkedin.com/in/jacob-couchenour-886904121/" class="icon brands fa-linkedin"><span
 					class="label">linkedin</span></a></li>
 	</ul>
