--- a/index.html
+++ b/index.html
@@ -14,15 +14,19 @@
 </head>
 
 <body class="is-preload">
-
 	<!-- Nav -->
 	<nav id="nav">
 		<ul class="container">
 			<li><a href="#top">Top</a></li>
 			<li><a href="#portfolio">Portfolio</a></li>
+			<li><a href="https://github.com/CouchenourJake" class="icon brands fa-github"><span
+						class="label">Github</span></a></li>
+			<li><a href="https://www.linkedin.com/in/jacob-couchenour-886904121/" class="icon brands fa-linkedin"><span
+						class="label">linkedin</span></a></li>
+			<li><a href="https://www.youtube.com/@jacobcouchenour2232/videos" class="icon brands fa-youtube"><span
+						class="label">Youtube</span></a></li>
 		</ul>
 	</nav>
-
 	<!-- Home -->
 	<article id="top" class="wrapper style1">
 		<div class="container">
@@ -40,7 +44,6 @@
 			</div>
 		</div>
 	</article>
-
 	<!-- Work -->
 	<article id="work" class="wrapper style2">
 		<div class="container">
@@ -54,61 +57,55 @@
 			<div class="row aln-center">
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="image fit"><img src=images\JDE.png alt="" /></span>
+						<span><img src=images\JDE.png alt="" /></span>
 						<h3>JD Edwards</h3>
 						<p>-Data Entry <br>-Data Mining <br>-Data Processing</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="image fit"><img src=images\excel.jpg alt="" /></span>
+						<span><img src=images\excel.jpg alt="" /></span>
 						<h3>Microsoft Excel</h3>
 						<p>-Power Query/Data Cleaning <br> -Pivot Tables & Visualizations <br>-Data Analysis</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="image fit"><img src=images\BI.png alt="" /></span>
+						<span><img src=images\BI.png alt="" /></span>
 						<h3>Microsoft Power BI</h3>
 						<p>-Data Visualizations <br>-Dashboards<br>-Interactive Data Analysis</p>
 					</section>
 				</div>
-				<div class="row aln-center">
-					<div class="col-4 col-6-medium col-12-small">
-						<section class="box style1">
-							<span class="image fit"><img src=images\MSSMS.png alt="" /></span>
-							<h3>Microsoft SQL SMS</h3>
-							<p>-Data Cleaning <br> -Querying Relational Tables <br>-Data Analysis</p>
-						</section>
-					</div>
-					<div class="col-4 col-6-medium col-12-small">
-						<section class="box style1">
-							<span class="image fit"><img src=images\Tableau.jpg alt="" /></span>
-							<h3>Tableau</h3>
-							<p>-Data Visualizations <br>-Dashboards<br>-Interactive Data Analysis</p>
-						</section>
-					</div>
-
-					<div class="col-4 col-6-medium col-12-small">
-						<section class="box style1">
-							<span class="image fit"><img src=images\r-programming.png alt="" /></span>
-							<h3>R Programing</h3>
-							<p>-Data Cleaning <br> -Data Visualizations <br>-Data Analysis</p>
-							</p>
-						</section>
-					</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<span><img src=images\MSSMS.png alt="" /></span>
+						<h3>Microsoft SQL SMS</h3>
+						<p>-Data Cleaning <br> -Querying Relational Tables <br>-Data Analysis</p>
+					</section>
 				</div>
-				<footer>
-				</footer>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<span><img src=images\T.png alt="" /></span>
+						<h3>Tableau</h3>
+						<p>-Data Visualizations <br>-Dashboards<br>-Interactive Data Analysis</p>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<span><img src=images\r.jpg alt="" /></span>
+						<h3>R Programing</h3>
+						<p>-Data Cleaning <br> -Data Visualizations <br>-Data Analysis</p>
+					</section>
+				</div>
 			</div>
+		</div>
 	</article>
-
 	<!-- Portfolio -->
 	<article id="portfolio" class="wrapper style3">
 		<div class="container">
 			<header>
 				<h2>Here are some projects I made.</h2>
-				<p>Please click on the icons to navigate to my projects. <br> You will find that I am competent in
+				<!--<p>Please click on the icons to navigate to my projects. <br> You will find that I am competent in
 					Microsoft Excel, Power Query, Pivot Tables, SQL, and Tableau.</p>
 			</header>
 			<div class="row">
@@ -122,7 +119,7 @@
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="https://www.youtube.com/@jacobcouchenour2232/videos" class="image featured"><img
+						<a href= class="image featured"><img
 								src=images\SQL.png alt="" /></a>
 						<h3><a href="https://www.youtube.com/@jacobcouchenour2232/videos">Videos</a></h3>
 						<h3><a href="https://github.com/CouchenourJake/SQL_TXT/blob/main/SQLQuery12_8_5_22.sql">Query
@@ -138,34 +135,34 @@
 						<p>Check out my RMD file.</p>
 					</article>
 				</div>
+	</article>-->
 
-	</article>
-
-
-	<ul class="social">
-		<li><a href="https://github.com/CouchenourJake" class="icon brands fa-github"><span
-					class="label">Github</span></a></li>
-		<li><a href="https://www.linkedin.com/in/jacob-couchenour-886904121/" class="icon brands fa-linkedin"><span
-					class="label">linkedin</span></a></li>
-	</ul>
-	<hr />
-	</div>
-	</div>
-	<footer>
-		<!--<ul id="copyright">
+				<hr />
+		</div>
+		<ul class="social">
+			<li><a href="https://github.com/CouchenourJake" class="icon brands fa-github"><span
+						class="label">Github</span></a></li>
+			<li><a href="https://www.linkedin.com/in/jacob-couchenour-886904121/" class="icon brands fa-linkedin"><span
+						class="label">linkedin</span></a></li>
+			<li><a href="https://www.youtube.com/@jacobcouchenour2232/videos" class="icon brands fa-youtube"><span
+						class="label">Youtube</span></a></li>
+		</ul>
+		</div>
+		<footer>
+			<!--<ul id="copyright">
 							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 				</div>
 			</article>-->
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+			<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
 </body>
 
