--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
 		<div class="container">
 			<header>
 				<h2>Here are some projects I made.</h2>
-				<!--<p>Please click on the icons to navigate to my projects. <br> You will find that I am competent in
+				<p>Please click on the icons to navigate to my projects. <br> You will find that I am competent in
 					Microsoft Excel, Power Query, Pivot Tables, SQL, and Tableau.</p>
 			</header>
 			<div class="row">
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="https://public.tableau.com/app/profile/jacob.couchenour" class="image featured"><img
-								src=images\Tableau.jpg alt="" /></a>
+								src= alt="" /></a>
 						<h3><a href="https://public.tableau.com/app/profile/jacob.couchenour">Tableau</a></h3>
 						<p>Check out my visualizations in Tableau.</p>
 					</article>
@@ -120,7 +120,7 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href= class="image featured"><img
-								src=images\SQL.png alt="" /></a>
+								src= alt="" /></a>
 						<h3><a href="https://www.youtube.com/@jacobcouchenour2232/videos">Videos</a></h3>
 						<h3><a href="https://github.com/CouchenourJake/SQL_TXT/blob/main/SQLQuery12_8_5_22.sql">Query
 								Text</a></h3>
@@ -130,7 +130,7 @@
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="R.html" class="image featured"><img src=images\r.jpg alt="" /></a>
+						<a href="R.html" class="image featured"><img src=alt="" /></a>
 						<h3><a href="R.html">R</a></h3>
 						<p>Check out my RMD file.</p>
 					</article>
