--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<header>
 						<h1><strong>Jacob Couchenour</strong></h1>
 					</header>
-					<p>A highly motivated Data Analyst.</p>
+					<p>A highly motivated Data Analyst</p>
 					<a href="#portfolio" class="button large scrolly">Check out my projects</a>
 				</div>
 			</div>
@@ -112,15 +112,14 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="https://public.tableau.com/app/profile/jacob.couchenour" class="image featured"><img
-								src= alt="" /></a>
+								src=alt="" /></a>
 						<h3><a href="https://public.tableau.com/app/profile/jacob.couchenour">Tableau</a></h3>
 						<p>Check out my visualizations in Tableau.</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href= class="image featured"><img
-								src= alt="" /></a>
+						<a href=class="image featured"><img src=alt="" /></a>
 						<h3><a href="https://www.youtube.com/@jacobcouchenour2232/videos">Videos</a></h3>
 						<h3><a href="https://github.com/CouchenourJake/SQL_TXT/blob/main/SQLQuery12_8_5_22.sql">Query
 								Text</a></h3>
@@ -137,32 +136,32 @@
 				</div>
 	</article>-->
 
-				<hr />
-		</div>
-		<ul class="social">
-			<li><a href="https://github.com/CouchenourJake" class="icon brands fa-github"><span
-						class="label">Github</span></a></li>
-			<li><a href="https://www.linkedin.com/in/jacob-couchenour-886904121/" class="icon brands fa-linkedin"><span
-						class="label">linkedin</span></a></li>
-			<li><a href="https://www.youtube.com/@jacobcouchenour2232/videos" class="icon brands fa-youtube"><span
-						class="label">Youtube</span></a></li>
-		</ul>
-		</div>
-		<footer>
-			<!--<ul id="copyright">
+	<hr />
+	</div>
+	<ul class="social">
+		<li><a href="https://github.com/CouchenourJake" class="icon brands fa-github"><span
+					class="label">Github</span></a></li>
+		<li><a href="https://www.linkedin.com/in/jacob-couchenour-886904121/" class="icon brands fa-linkedin"><span
+					class="label">linkedin</span></a></li>
+		<li><a href="https://www.youtube.com/@jacobcouchenour2232/videos" class="icon brands fa-youtube"><span
+					class="label">Youtube</span></a></li>
+	</ul>
+	</div>
+	<footer>
+		<!--<ul id="copyright">
 							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 				</div>
 			</article>-->
 
-			<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
 </body>
 
