--- a/index.html
+++ b/index.html
@@ -108,34 +108,52 @@
 				<p>Please click on the icons to navigate to my projects. <br> You will find that I am competent in
 					Microsoft Excel, Power Query, Pivot Tables, SQL, and Tableau.</p>
 			</header>
-			<div class="row">
+			<div class="row aln-center">
 				<div class="col-4 col-6-medium col-12-small">
-					<article class="box style2">
-						<a href="https://public.tableau.com/app/profile/jacob.couchenour" class="image featured"><img
-								src=alt="" /></a>
-						<h3><a href="https://public.tableau.com/app/profile/jacob.couchenour">Tableau</a></h3>
-						<p>Check out my visualizations in Tableau.</p>
-					</article>
+					<section class="box style1">
+						<span><img src=images\JDE.png alt="" /></span>
+						<h3>JD Edwards</h3>
+						<p>-Data Entry <br>-Data Mining <br>-Data Processing</p>
+					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
-					<article class="box style2">
-						<a href=class="image featured"><img src=alt="" /></a>
-						<h3><a href="https://www.youtube.com/@jacobcouchenour2232/videos">Videos</a></h3>
-						<h3><a href="https://github.com/CouchenourJake/SQL_TXT/blob/main/SQLQuery12_8_5_22.sql">Query
-								Text</a></h3>
-						<p>Check out my Microsoft Excel, Power Query/Pivot, and SQL videos AND OR look at SQL Queries I
-							have created.</p>
-					</article>
+					<section class="box style1">
+						<span><img src=images\excel.jpg alt="" /></span>
+						<h3>Microsoft Excel</h3>
+						<p>-Power Query/Data Cleaning <br> -Pivot Tables & Visualizations <br>-Data Analysis</p>
+					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
-					<article class="box style2">
-						<a href="R.html" class="image featured"><img src=alt="" /></a>
-						<h3><a href="R.html">R</a></h3>
-						<p>Check out my RMD file.</p>
-					</article>
+					<section class="box style1">
+						<span><img src=images\BI.png alt="" /></span>
+						<h3>Microsoft Power BI</h3>
+						<p>-Data Visualizations <br>-Dashboards<br>-Interactive Data Analysis</p>
+					</section>
 				</div>
-	</article>-->
-
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<span><img src=images\MSSMS.png alt="" /></span>
+						<h3>Microsoft SQL SMS</h3>
+						<p>-Data Cleaning <br> -Querying Relational Tables <br>-Data Analysis</p>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<span><img src=images\T.png alt="" /></span>
+						<h3>Tableau</h3>
+						<p>-Data Visualizations <br>-Dashboards<br>-Interactive Data Analysis</p>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<span><img src=images\r.jpg alt="" /></span>
+						<h3>R Programing</h3>
+						<p>-Data Cleaning <br> -Data Visualizations <br>-Data Analysis</p>
+					</section>
+				</div>
+			</div>
+		</div>
+	</article>
 	<hr />
 	</div>
 	<ul class="social">
