--- a/index.html
+++ b/index.html
@@ -101,19 +101,25 @@
 		</div>
 	</article>
 	<!-- Portfolio -->
-	<article id="portfolio" class="wrapper style3">
+	<article id="portfolio" class="wrapper style2">
 		<div class="container">
 			<header>
 				<h2>Here are some projects I made.</h2>
-				<p>Please click on the icons to navigate to my projects. <br> You will find that I am competent in
-					Microsoft Excel, Power Query, Pivot Tables, SQL, and Tableau.</p>
+				<p>Please click on the icons to navigate to my projects. <br></p>
 			</header>
 			<div class="row aln-center">
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span><img src=images\JDE.png alt="" /></span>
 						<h3>JD Edwards</h3>
-						<p>-Data Entry <br>-Data Mining <br>-Data Processing</p>
+						<div class="dropdown">
+							<button onclick="myFunction()" class="dropbtn">Dropdown</button>
+							<div id="myDropdown" class="dropdown-content">
+							  <a href="https://github.com/CouchenourJake/SQL_TXT/blob/main/SQLQuery12_8_5_22.sql">Link 1</a>
+							  <a href="JCouchenourPortfolio\R.html">Link 2</a>
+							  <a href="#">Link 3</a>
+							</div>
+						  </div>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
@@ -130,7 +136,7 @@
 						<p>-Data Visualizations <br>-Dashboards<br>-Interactive Data Analysis</p>
 					</section>
 				</div>
-				<div class="col-4 col-6-medium col-12-small">
+				<!--<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span><img src=images\MSSMS.png alt="" /></span>
 						<h3>Microsoft SQL SMS</h3>
@@ -150,7 +156,7 @@
 						<h3>R Programing</h3>
 						<p>-Data Cleaning <br> -Data Visualizations <br>-Data Analysis</p>
 					</section>
-				</div>
+				<--</div>
 			</div>
 		</div>
 	</article>
