--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Miniport by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!--Miniport by HTML5 UPhtml5up.net | @ajlknFree for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
 <html>
 
 <head>
@@ -44,7 +40,7 @@
 			</div>
 		</div>
 	</article>
-	<!-- Work -->
+	<!-- Resume App -->
 	<article id="work" class="wrapper style2">
 		<div class="container">
 			<header>
@@ -110,55 +106,48 @@
 			<div class="row aln-center">
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
+						<span><img src=images\Vet.jpg alt="" /></span>
+						<h3>US Veteran Suicide</h3>
+						<div class="dropdown">
+							<button onclick="myFunction()" class="dropbtn">Links to Project</button>
+							<div id="myDropdown" class="dropdown-content">
+								<a href="https://github.com/CouchenourJake/SQL_TXT/blob/main/SQLQuery12_8_5_22.sql">Link1</a>
+								<a href="#">Link 2</a>
+								<a href="#">Link 3</a>
+							</div>
+						</div>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
 						<span><img src=images\JDE.png alt="" /></span>
 						<h3>JD Edwards</h3>
 						<div class="dropdown">
 							<button onclick="myFunction()" class="dropbtn">Dropdown</button>
 							<div id="myDropdown" class="dropdown-content">
-							  <a href="https://github.com/CouchenourJake/SQL_TXT/blob/main/SQLQuery12_8_5_22.sql">Link 1</a>
-							  <a href="JCouchenourPortfolio\R.html">Link 2</a>
-							  <a href="#">Link 3</a>
+								<a href="https://github.com/CouchenourJake/SQL_TXT/blob/main/SQLQuery12_8_5_22.sql">Link1</a>
+								<a href="R.html">Link 2</a>
+								<a href="#">Link 3</a>
 							</div>
-						  </div>
+						</div>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span><img src=images\excel.jpg alt="" /></span>
-						<h3>Microsoft Excel</h3>
-						<p>-Power Query/Data Cleaning <br> -Pivot Tables & Visualizations <br>-Data Analysis</p>
+						<span><img src=images\JDE.png alt="" /></span>
+						<h3>JD Edwards</h3>
+						<div class="dropdown">
+							<button onclick="myFunction()" class="dropbtn">Dropdown</button>
+							<div id="myDropdown" class="dropdown-content">
+								<a
+									href="https://github.com/CouchenourJake/SQL_TXT/blob/main/SQLQuery12_8_5_22.sql">Link1</a>
+								<a href="https://couchenourjake.github.io/JCouchenourPortfolio.github.io/R.html">Link 2</a>
+								<a href="#">Link 3</a>
+							</div>
+						</div>
 					</section>
 				</div>
-				<div class="col-4 col-6-medium col-12-small">
-					<section class="box style1">
-						<span><img src=images\BI.png alt="" /></span>
-						<h3>Microsoft Power BI</h3>
-						<p>-Data Visualizations <br>-Dashboards<br>-Interactive Data Analysis</p>
-					</section>
-				</div>
-				<!--<div class="col-4 col-6-medium col-12-small">
-					<section class="box style1">
-						<span><img src=images\MSSMS.png alt="" /></span>
-						<h3>Microsoft SQL SMS</h3>
-						<p>-Data Cleaning <br> -Querying Relational Tables <br>-Data Analysis</p>
-					</section>
-				</div>
-				<div class="col-4 col-6-medium col-12-small">
-					<section class="box style1">
-						<span><img src=images\T.png alt="" /></span>
-						<h3>Tableau</h3>
-						<p>-Data Visualizations <br>-Dashboards<br>-Interactive Data Analysis</p>
-					</section>
-				</div>
-				<div class="col-4 col-6-medium col-12-small">
-					<section class="box style1">
-						<span><img src=images\r.jpg alt="" /></span>
-						<h3>R Programing</h3>
-						<p>-Data Cleaning <br> -Data Visualizations <br>-Data Analysis</p>
-					</section>
-				<--</div>
 			</div>
-		</div>
 	</article>
 	<hr />
 	</div>
@@ -172,12 +161,11 @@
 	</ul>
 	</div>
 	<footer>
-		<!--<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+		<!--<ul id="copyright"><li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 				</div>
-			</article>-->
+</article>-->
 
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
