--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
 		<div class="container">
 			<header>
 				<h2>Here are some projects I made.</h2>
-				<p>Please click on the icons to navigate to my projects. <br></p>
+				<p>Please click on the dropdown menus to navigate to my projects. <br></p>
 			</header>
 			<div class="row aln-center">
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span><img src=images\Vet.jpg alt="" /></span>
-						<h3>US Veteran Suicide</h3>
+						<h3>US Veteran Suicide <br> Case Study</h3>
 						<div class="dropdown">
-							<button onclick="myFunction()" class="dropbtn">Links to Project</button>
-							<div id="myDropdown" class="dropdown-content">
-								<a href="https://github.com/CouchenourJake/SQL_TXT/blob/main/SQLQuery12_8_5_22.sql">Link1</a>
+							<button class="dropbtn">Dropdown</button>
+							<div class="dropdown-content">
+								<a href="#">Link 1</a>
 								<a href="#">Link 2</a>
 								<a href="#">Link 3</a>
 							</div>
@@ -120,13 +120,13 @@
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span><img src=images\JDE.png alt="" /></span>
-						<h3>JD Edwards</h3>
+						<span><img src=images\banks.jpg alt="" /></span>
+						<h3>United States Failed <br> Banks</h3>
 						<div class="dropdown">
-							<button onclick="myFunction()" class="dropbtn">Dropdown</button>
-							<div id="myDropdown" class="dropdown-content">
-								<a href="https://github.com/CouchenourJake/SQL_TXT/blob/main/SQLQuery12_8_5_22.sql">Link1</a>
-								<a href="R.html">Link 2</a>
+							<button class="dropbtn">Dropdown</button>
+							<div class="dropdown-content">
+								<a href="#">Link 1</a>
+								<a href="#">Link 2</a>
 								<a href="#">Link 3</a>
 							</div>
 						</div>
@@ -134,20 +134,20 @@
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span><img src=images\JDE.png alt="" /></span>
-						<h3>JD Edwards</h3>
+						<span><img src=images\SQL.jpg alt="" /></span>
+						<h3>SQL Data Manipulation</h3>
 						<div class="dropdown">
-							<button onclick="myFunction()" class="dropbtn">Dropdown</button>
-							<div id="myDropdown" class="dropdown-content">
-								<a
-									href="https://github.com/CouchenourJake/SQL_TXT/blob/main/SQLQuery12_8_5_22.sql">Link1</a>
-								<a href="https://couchenourjake.github.io/JCouchenourPortfolio.github.io/R.html">Link 2</a>
+							<button class="dropbtn">Dropdown</button>
+							<div class="dropdown-content">
+								<a href="#">Link 1</a>
+								<a href="#">Link 2</a>
 								<a href="#">Link 3</a>
 							</div>
 						</div>
-					</section>
 				</div>
+				</section>
 			</div>
+		</div>
 	</article>
 	<hr />
 	</div>
