--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						<div class="dropdown">
 							<button class="dropbtn">Dropdown</button>
 							<div class="dropdown-content">
-								<a href="https://github.com/CouchenourJake/SQL/blob/main/Mock_Oil%26Gas_Sales_Database.sql">Mock Database 1</a>
+								<a href="https://github.com/CouchenourJake/SQL/blob/main/Mock_Oil%26Gas_Sales_Database.sql">Mock Relational Database</a>
 								<a href="#">Link 2</a>
 								<a href="#">Link 3</a>
 							</div>
