--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					decisions.</h2>
 			</header>
 			<header>
-				<h3>I am well rounded in the following applications/programs.</h3>
+				<h3>I am experienced in the following applications/programs.</h3>
 			</header>
 			<div class="row aln-center">
 				<div class="col-4 col-6-medium col-12-small">
