--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span><img src=images\banks.jpg alt="" /></span>
-						<h3>United States Failed <br> Banks</h3>
+						<span><img src=images\Sales_DB.png alt="" /></span>
+						<h3>-Interactive Sales<br>Dashboard</h3>
 						<div class="dropdown">
 							<button class="dropbtn">Menu</button>
 							<div class="dropdown-content">
 								<a
-									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/FailedUSBanks_16696533902580/Dashboard1">Tableau
+									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/SalesAnalysisDashboard_16713145491250/Dashboard1">Tableau
 									Dashboard</a>
 								<!--<a href="#">Link 2</a>
 								<a href="#">Link 3</a>-->
